# lab3

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yml
